# KT-Project3

./: CMakeLists.txt  README.md  brand.cpp  brand.h  consumer.cpp  consumer.h  foundation.cpp  foundation.h  main.cpp  makeup.cpp  makeup.h  testing.cpp
